--- a/FarmProject.Presentation/Pages/Shared/_Layout.cshtml
+++ b/FarmProject.Presentation/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/AddRabbit">Add Rabbit</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/AllRabbits">All Rabbits</a>
+                        </li>
                     </ul>
                 </div>
             </div>
