fix: update the presentation layer to build based on the changes

--- a/FarmProject.Presentation/Pages/AllRabbits.cshtml
+++ b/FarmProject.Presentation/Pages/AllRabbits.cshtml
@@ -19,7 +19,7 @@
                     <p><strong>Gender:</strong> @rabbit.Gender</p>
                 </div>
                 <div class="col-md-6">
-                    <p><strong>Breedable:</strong> @(rabbit.Breedable ? "Yes" : "No")</p>
+                    <p><strong>Breeding Status:</strong> @rabbit.BreedingStatus</p>
                 </div>
             </div>
         </div>
