--- a/FarmProject.Presentation/Pages/RabbitDetails.cshtml
+++ b/FarmProject.Presentation/Pages/RabbitDetails.cshtml
@@ -17,7 +17,7 @@
                 <p><strong>Gender:</strong> @Model.Rabbit.Gender</p>
             </div>
             <div class="col-md-6">
-                <p><strong>Breedable:</strong> @(Model.Rabbit.Breedable ? "Yes" : "No")</p>
+                <p><strong>Breeding Status:</strong> @Model.Rabbit.BreedingStatus</p>
             </div>
         </div>
     </div>
