--- a/FarmProject.Presentation/Pages/Shared/_Layout.cshtml
+++ b/FarmProject.Presentation/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/AllRabbits">All Rabbits</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/AddPair">Add Pair</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/AllPairs">All Pairs</a>
+                        </li>
                     </ul>
                 </div>
             </div>
