feat: add exceptions handling via Result Pattern

--- a/FarmProject.Presentation/Pages/RabbitDetails.cshtml
+++ b/FarmProject.Presentation/Pages/RabbitDetails.cshtml
@@ -5,36 +5,39 @@
     ViewData["Title"] = "Rabbit Details";
 }
 
-<h1>Rabbit Details</h1>
+@if(Model.RabbitDto != null)
+{
+    <h1>Rabbit Details</h1>
 
-<div class="card mt-4">
-    <div class="card-header">
-        Rabbit #@Model.RabbitDto.Id
-    </div>
-    <div class="card-body">
-        <h5 class="card-title">@Model.RabbitDto.Name</h5>
-        <div class="row mt-3">
-            <div class="col-md-6">
-                <p><strong>Gender:</strong> @Model.RabbitDto.Gender</p>
-            </div>
-            <div class="col-md-6">
-                <p><strong>Breeding Status:</strong> @Model.RabbitDto.BreedingStatus</p>
+    <div class="card mt-4">
+        <div class="card-header">
+            Rabbit #@Model.RabbitDto.Id
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">@Model.RabbitDto.Name</h5>
+            <div class="row mt-3">
+                <div class="col-md-6">
+                    <p><strong>Gender:</strong> @Model.RabbitDto.Gender</p>
+                </div>
+                <div class="col-md-6">
+                    <p><strong>Breeding Status:</strong> @Model.RabbitDto.BreedingStatus</p>
+                </div>
             </div>
         </div>
+        <div class="card-footer">
+            <a asp-page="/AllRabbits" class="btn btn-primary">All Rabbits</a>
+        </div>
     </div>
-    <div class="card-footer">
-        <a asp-page="/AllRabbits" class="btn btn-primary">All Rabbits</a>
-    </div>
-</div>
 
-<h1>Update Rabbit</h1>
-<form method="post">
-    <select asp-for="UpdateRabbitDto.BreedingStatus" class="form-control">
-        <option value="">Select Breeding Status</option>
-        @foreach (var status in Enum.GetValues(typeof(BreedingStatus)))
-        {
-            <option value="@status">@status</option>
-        }
-    </select>
-    <button type="submit" class="btn btn-primary">Update</button>
-</form>
+    <h1>Update Rabbit</h1>
+    <form method="post">
+        <select asp-for="UpdateRabbitDto.BreedingStatus" class="form-control">
+            <option value="">Select Breeding Status</option>
+            @foreach (var status in Enum.GetValues(typeof(BreedingStatus)))
+            {
+                <option value="@status">@status</option>
+            }
+        </select>
+        <button type="submit" class="btn btn-primary">Update</button>
+    </form>
+}
