--- a/FarmProject.Presentation/Pages/PairDetails.cshtml
+++ b/FarmProject.Presentation/Pages/PairDetails.cshtml
@@ -37,9 +37,12 @@
     <form method="post">
         <select asp-for="UpdatePairDto.PairingStatus" class="form-control">
             <option value="">Select Pairing Status</option>
-            @foreach (var status in Enum.GetValues(typeof(PairingStatus)))
+            @foreach (PairingStatus status in Enum.GetValues(typeof(PairingStatus)))
             {
-                <option value="@status">@status</option>
+                if(status != PairingStatus.Active)
+                {
+                    <option value="@status">@status</option>
+                }
             }
         </select>
         <button type="submit" class="btn btn-primary">Update</button>
