fix: make changes to the files so that the code compiles based on prev implementation of methods related to the recording of impregnation status

--- a/FarmProject.Presentation/Pages/AllPairs.cshtml
+++ b/FarmProject.Presentation/Pages/AllPairs.cshtml
@@ -12,8 +12,8 @@
         Pair #@pair.Id
     </div>
     <div class="card-body">
-        <h5 class="card-title"><strong>Female ID:</strong> @pair.FemaleId</h5>
-        <h5 class="card-title"><strong>Male ID:</strong> @pair.MaleId</h5>
+        <h5 class="card-title"><strong>Female ID:</strong> @pair.FemaleRabbit.Id</h5>
+        <h5 class="card-title"><strong>Male ID:</strong> @pair.MaleRabbit.Id</h5>
         <div class="row mt-3">
             <div class="col-md-6">
                 <p><strong>Start Date:</strong> @pair.StartDate</p>
