--- a/FarmProject.Presentation/Pages/AllPairs.cshtml
+++ b/FarmProject.Presentation/Pages/AllPairs.cshtml
@@ -12,8 +12,8 @@
         Pair #@pair.Id
     </div>
     <div class="card-body">
-        <h5 class="card-title"><strong>Female ID:</strong> @((pair.FemaleRabbit?.Id != null)? pair.FemaleRabbit?.Id : "Unknown")</h5>
-        <h5 class="card-title"><strong>Male ID:</strong> @((pair.MaleRabbit?.Id != null) ? pair.MaleRabbit?.Id : "Unknown")</h5>
+        <h5 class="card-title"><strong>Female ID:</strong> @((pair.FemaleBreedingRabbit?.Id != null)? pair.FemaleBreedingRabbit?.Id : "Unknown")</h5>
+        <h5 class="card-title"><strong>Male ID:</strong> @((pair.MaleBreedingRabbit?.Id != null) ? pair.MaleBreedingRabbit?.Id : "Unknown")</h5>
         <div class="row mt-3">
             <div class="col-md-6">
                 <p><strong>Start Date:</strong> @pair.StartDate</p>
