--- a/FarmProject.Presentation/Pages/BreedingRabbitDetails.cshtml
+++ b/FarmProject.Presentation/Pages/BreedingRabbitDetails.cshtml
@@ -1,37 +1,37 @@
 ﻿@page
 @using FarmProject.Domain.Constants
-@model FarmProject.Presentation.Pages.RabbitDetailsModel
+@model FarmProject.Presentation.Pages.BreedingRabbitDetailsModel
 @{
     ViewData["Title"] = "Rabbit Details";
 }
 
-@if(Model.RabbitDto != null)
+@if(Model.BreedingRabbitDto != null)
 {
     <h1>Rabbit Details</h1>
 
     <div class="card mt-4">
         <div class="card-header">
-            Rabbit #@Model.RabbitDto.Id
+            Rabbit #@Model.BreedingRabbitDto.Id
         </div>
         <div class="card-body">
-            <h5 class="card-title">@Model.RabbitDto.Name</h5>
+            <h5 class="card-title">@Model.BreedingRabbitDto.Name</h5>
             <div class="row mt-3">
                 <div class="col-md-6">
-                    <p><strong>Gender:</strong> @Model.RabbitDto.Gender</p>
+                    <p><strong>Gender:</strong> @Model.BreedingRabbitDto.Gender</p>
                 </div>
                 <div class="col-md-6">
-                    <p><strong>Breeding Status:</strong> @Model.RabbitDto.BreedingStatus</p>
+                    <p><strong>Breeding Status:</strong> @Model.BreedingRabbitDto.BreedingStatus</p>
                 </div>
             </div>
         </div>
         <div class="card-footer">
-            <a asp-page="/AllRabbits" class="btn btn-primary">All Rabbits</a>
+            <a asp-page="/AllBreedingRabbits" class="btn btn-primary">All Rabbits</a>
         </div>
     </div>
 
     <h1>Update Rabbit</h1>
     <form method="post">
-        <select asp-for="UpdateRabbitDto.BreedingStatus" class="form-control">
+        <select asp-for="UpdateBreedingRabbitDto.BreedingStatus" class="form-control">
             <option value="">Select Breeding Status</option>
             <option value=@BreedingStatus.Inapt>@BreedingStatus.Inapt</option>
         </select>
