--- a/FarmProject.Presentation/Pages/Shared/_Layout.cshtml
+++ b/FarmProject.Presentation/Pages/Shared/_Layout.cshtml
@@ -23,10 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/AddRabbit">Add Rabbit</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/AddBreedingRabbit">Add Rabbit</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/AllRabbits">All Rabbits</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/AllBreedingRabbits">All Rabbits</a>
                         </li>
 
                         <li class="nav-item">
