feat: add some basic razor pages for the cages

--- a/FarmProject.Presentation/Pages/BreedingRabbitDetails.cshtml
+++ b/FarmProject.Presentation/Pages/BreedingRabbitDetails.cshtml
@@ -20,6 +20,9 @@
                     <p><strong>Gender:</strong> @Model.BreedingRabbitDto.Gender</p>
                 </div>
                 <div class="col-md-6">
+                    <p><strong>Cage:</strong> #@Model.BreedingRabbitDto.CageId</p>
+                </div>
+                <div class="col-md-6">
                     <p><strong>Breeding Status:</strong> @Model.BreedingRabbitDto.BreedingStatus</p>
                 </div>
             </div>
