--- a/FarmProject.Presentation/Pages/AllBreedingRabbits.cshtml
+++ b/FarmProject.Presentation/Pages/AllBreedingRabbits.cshtml
@@ -19,6 +19,9 @@
                     <p><strong>Gender:</strong> @breedingRabbit.Gender</p>
                 </div>
                 <div class="col-md-6">
+                    <p><strong>Cage:</strong> #@breedingRabbit.CageId</p>
+                </div>
+                <div class="col-md-6">
                     <p><strong>Breeding Status:</strong> @breedingRabbit.BreedingStatus</p>
                 </div>
             </div>
