--- a/FarmProject.Presentation/Pages/Shared/_Layout.cshtml
+++ b/FarmProject.Presentation/Pages/Shared/_Layout.cshtml
@@ -35,6 +35,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/AllPairs">All Pairs</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/AddCage">Add Cage</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/AllCages">All Cages</a>
+                        </li>
                     </ul>
                 </div>
             </div>
