--- a/FarmProject.Presentation/Pages/PairDetails.cshtml
+++ b/FarmProject.Presentation/Pages/PairDetails.cshtml
@@ -14,8 +14,8 @@
             Pair #@Model.PairDto.Id
         </div>
         <div class="card-body">
-            <h5 class="card-title"><strong>Female ID:</strong> @Model.PairDto.FemaleBreedingRabbit.Id</h5>
-            <h5 class="card-title"><strong>Male ID:</strong> @Model.PairDto.MaleBreedingRabbit.Id</h5>
+            <h5 class="card-title"><strong>Female ID:</strong> @Model.PairDto.FemaleRabbit!.Id</h5>
+            <h5 class="card-title"><strong>Male ID:</strong> @Model.PairDto.MaleRabbitId</h5>
             <div class="row mt-3">
                 <div class="col-md-6">
                     <p><strong>Start Date:</strong> @Model.PairDto.StartDate</p>
